报告的完善

--- a/博客.md
+++ b/博客.md
@@ -1,5 +1,16 @@
 [TOC]
 
+| 这个作业属于哪个课程 | [班级链接](https://edu.cnblogs.com/campus/gdgy/InformationSecurity1912-Softwareengineering) |
+| :------------------: | :----------------------------------------------------------: |
+|  这个作业要求在哪里  | [作业链接](https://edu.cnblogs.com/campus/gdgy/InformationSecurity1912-Softwareengineering/homework/12147) |
+|    这个作业的目标    |               四则运算生成器+生成应用程序+结对               |
+|      项目成员1       |                       3119005476温桂豪                       |
+|      项目成员2       |                       3119005470罗行健                       |
+
+## 代码连接
+
+[GitHub链接](https://github.com/HHchhhhh/RuanGong)
+
 ## 实现
 
 ### 其他方法的实现
@@ -336,3 +347,50 @@ function countDivior(...arr) {
 <img src="博客.assets/image-20211020114632440.png" alt="image-20211020114632440" style="zoom:200%;" />
 
 - 对性能比较满意
+
+## 测试结果
+
+在命令行输入：
+
+![9cbc8ba5bec7b19c908c2cc5016da16](C:\Users\HHHH\Desktop\9cbc8ba5bec7b19c908c2cc5016da16.png)
+
+生成10000道10以内的四则运算题，通过JSON字符串将生成的js对象传入到exercises.json中，在exercises.json可以查看到生成的结果
+
+![ad91f0da417fb974ba5154d59ba92c0](C:\Users\HHHH\Desktop\ad91f0da417fb974ba5154d59ba92c0.png)
+
+（由于数据太多，这里只放出一部分的数据）
+
+## PSP表格
+
+| PSP2.1                                  | Personal Software Process Stages        | 预估耗时 | 实际耗时（分钟） |
+| --------------------------------------- | --------------------------------------- | -------- | ---------------- |
+| ·Planning                               | · 计划                                  | 30       | 40               |
+| · Estimate                              | · 估计这个任务需要多少时间              | 30       | 45               |
+| ·Development                            | 开发                                    | 200      | 400              |
+| · Analysis                              | · 需求分析 (包括学习新技术)             | 35       | 60               |
+| · Design Spec                           | · 生成设计文档                          | 35       | 55               |
+| · Design Review                         | · 设计复审                              | 50       | 160              |
+| · Coding Standard                       | · 代码规范 (为目前的开发制定合适的规范) | 20       | 25               |
+| · Design                                | · 具体设计                              | 40       | 45               |
+| · Coding                                | · 具体编码                              | 100      | 200              |
+| · Code Review                           | · 代码复审                              | 30       | 35               |
+| · Test                                  | · 测试（自我测试，修改代码，提交修改）  | 30       | 125              |
+| · Reporting                             | · 报告                                  | 60       | 80               |
+| · Test Repor                            | · 测试报告                              | 25       | 20               |
+| · Size Measurement                      | · 计算工作量                            | 20       | 15               |
+| · Postmortem & Process Improvement Plan | · 事后总结, 并提出过程改进计划          | 40       | 50               |
+|                                         | · 合计                                  | 745      | 1355             |
+
+## 项目小结
+
+该项目使用JavaScript完成，因为JavaScript是一种前端语言，所以这次项目实际写起来会遇到一些阻碍，特别是对数据处理方面，以及代码的复查，这次项目在这几个方面花费的时间是最多的。由于语言的不同和技术的差距，这次项目的编程是由精通前端的组员罗行健完成的，组员温桂豪负责的是报告的编写，在报告中，因为JavaScript语言的局限性，有一些作业的需求并没有实现，希望老师能够谅解。
+
+成员1：罗行健
+
+在刚看到项目要求的时候，并没有想用JavaScript去写，在项目前期查找资料和借鉴前几届师兄师姐项目的过程中，发现大部分都是使用
+
+Java和python来实现，几乎没有人用JavaScript，刚好自己精通JavaScript，于是便想着挑战一下自己，虽然过程有些艰辛，但最后项目完成也是对自己的一种突破。
+
+成员2：温桂豪
+
+在本次项目中我负责较为简单的部分，同时我也在学习JavaScript语言，边写边用，进行报告的撰写，最后在罗行健同学的协助下完成了报告的编写，在这次项目中让我感受最深的是多人合作编程的优点，每个人可以专注自己的部分，可以花更多的时间去打磨自己的任务，提升了项目的整体水平。
