--- a/博客.md
+++ b/博客.md
@@ -350,13 +350,15 @@ function countDivior(...arr) {
 
 ## 测试结果
 
+- 命令行输入方式：`node test.js n=需要生成题目的数量 r=单个数值的范围`
+
 在命令行输入：
 
-![9cbc8ba5bec7b19c908c2cc5016da16](C:\Users\HHHH\Desktop\9cbc8ba5bec7b19c908c2cc5016da16.png)
+![image-20211021114255153](博客.assets/image-20211021114255153.png)
 
-生成10000道10以内的四则运算题，通过JSON字符串将生成的js对象传入到exercises.json中，在exercises.json可以查看到生成的结果
+生成10000道10以内的四则运算题，将js对象转换为JSON对象存入exercises.json中，在exercises.json可以查看到生成的结果
 
-![ad91f0da417fb974ba5154d59ba92c0](C:\Users\HHHH\Desktop\ad91f0da417fb974ba5154d59ba92c0.png)
+![image-20211021114323495](博客.assets/image-20211021114323495.png)
 
 （由于数据太多，这里只放出一部分的数据）
 
@@ -383,14 +385,12 @@ function countDivior(...arr) {
 
 ## 项目小结
 
-该项目使用JavaScript完成，因为JavaScript是一种前端语言，所以这次项目实际写起来会遇到一些阻碍，特别是对数据处理方面，以及代码的复查，这次项目在这几个方面花费的时间是最多的。由于语言的不同和技术的差距，这次项目的编程是由精通前端的组员罗行健完成的，组员温桂豪负责的是报告的编写，在报告中，因为JavaScript语言的局限性，有一些作业的需求并没有实现，希望老师能够谅解。
+该项目使用JavaScript完成，因为JavaScript是一种前端语言，所以这次项目实际写起来会遇到一些阻碍，特别是对数据处理方面，以及代码的复查，这次项目在这几个方面花费的时间是最多的。由于语言的不同和技术的差距，这次项目的编程是由精通前端的组员罗行健完成的，组员温桂豪负责的是算法思路的设计和报告的编写，在报告中，因为JavaScript的局限性，在性能分析上手段不多，且没有其他语言完善，希望老师能够谅解。
 
 成员1：罗行健
 
-在刚看到项目要求的时候，并没有想用JavaScript去写，在项目前期查找资料和借鉴前几届师兄师姐项目的过程中，发现大部分都是使用
-
-Java和python来实现，几乎没有人用JavaScript，刚好自己精通JavaScript，于是便想着挑战一下自己，虽然过程有些艰辛，但最后项目完成也是对自己的一种突破。
+在刚看到项目要求的时候，并没有想用JavaScript去写，在项目前期查找资料和借鉴前几届师兄师姐项目的过程中，发现大部分都是使用Java和python来实现，没有人用JavaScript，刚好自己精通JavaScript，于是便想着挑战一下自己，虽然过程有些艰辛，但最后项目完成也是对自己的一种突破。
 
 成员2：温桂豪
 
-在本次项目中我负责较为简单的部分，同时我也在学习JavaScript语言，边写边用，进行报告的撰写，最后在罗行健同学的协助下完成了报告的编写，在这次项目中让我感受最深的是多人合作编程的优点，每个人可以专注自己的部分，可以花更多的时间去打磨自己的任务，提升了项目的整体水平。
+在本次项目中我负责较为简单的部分，提供四则运算算法编写的思路，同时我也在学习JavaScript语言，边写边用，进行报告的撰写，最后在罗行健同学的协助下完成了报告的编写，在这次项目中让我感受最深的是多人合作编程的优点，每个人可以专注自己的部分，可以花更多的时间去打磨自己的任务，提升了项目的整体水平。
