--- a/博客.md
+++ b/博客.md
@@ -352,11 +352,13 @@ function countDivior(...arr) {
 
 在命令行输入：
 
-![9cbc8ba5bec7b19c908c2cc5016da16](C:\Users\HHHH\Desktop\9cbc8ba5bec7b19c908c2cc5016da16.png)
+<img src="博客.assets/9cbc8ba5bec7b19c908c2cc5016da16.png">
 
-生成10000道10以内的四则运算题，通过JSON字符串将生成的js对象传入到exercises.json中，在exercises.json可以查看到生成的结果
+生成10000道10以内的)四则运算题，通过JSON字符串将生成的js对象传入到exercises.json中，在exercises.json可以查看到生成的结果
 
-![ad91f0da417fb974ba5154d59ba92c0](C:\Users\HHHH\Desktop\ad91f0da417fb974ba5154d59ba92c0.png)
+<img src="博客.assets/ad91f0da417fb974ba5154d59ba92c0.png">
+
+
 
 （由于数据太多，这里只放出一部分的数据）
 
